first session with Dion

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -75,3 +75,50 @@
   publisher={Wiley Online Library}
 }
 
+@incollection{Mills:2013hn,
+  author = {Mills, Barbara J and Roberts, John M Jr and Haas, W R Jr and Huntley, Deborah L and Peeples, Matthew A and Borck, Lewis and Ryan, Susan C and Breiger, Ronald L},
+  title = {{The Dynamics of Social Networks in the Late Prehispanic US Southwest}},
+  booktitle = {Network Analysis in Archaeology: New Approaches to Regional Interaction},
+  year = {2013},
+  editor = {Knappett, Carl},
+  publisher = {Oxford University Press},
+  month = may
+}
+
+@book{Robinson:1951wy,
+  title = {{A Method for Chronologically Ordering Archaeological Deposits}},
+  author = {Robinson, W S},
+  year = {1951}
+}
+
+@article{Giomi:2019fu,
+  author = {Giomi, Evan and Peeples, Matthew A},
+  title = {{Journal of Anthropological Archaeology}},
+  journal = {JOURNAL OF ANTHROPOLOGICAL ARCHAEOLOGY},
+  year = {2019},
+  volume = {53},
+  pages = {22--31},
+  month = mar
+}
+
+@article{Hidalgo:2009p292,
+  author = {Hidalgo, C{\'e}sar A and Hausmann, R},
+  title = {{The building blocks of economic complexity}},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2009},
+  volume = {106},
+  number = {26},
+  pages = {10570--10575}
+}
+
+@article{Balassa:1965ta,
+  author = {Balassa, Bela},
+  title = {{Trade liberalisation and ``revealed'' comparative advantage}},
+  journal = {The Manchester School},
+  year = {1965},
+  volume = {33},
+  number = {2},
+  pages = {99--123}
+}
+
+Send a message
