--- a/paper/mybibfile.bib
+++ b/paper/mybibfile.bib
@@ -1,4 +1,4 @@
-﻿@article{Dirac1953888,
+@article{Dirac1953888,
   title   = "The lorentz transformation and absolute time",
   journal = "Physica ",
   volume  = "19",
@@ -17,4 +17,14 @@
   year    = "1963",
   doi     = "10.1016/0003-4916(63)90068-X",
   author  = "R.P Feynman and F.L {Vernon Jr.}"
+}
+
+@incollection{Mills:2013hn,
+author = {Mills, Barbara J and Roberts, John M Jr and Haas, W R Jr and Huntley, Deborah L and Peeples, Matthew A and Borck, Lewis and Ryan, Susan C and Breiger, Ronald L},
+title = {{The Dynamics of Social Networks in the Late Prehispanic US Southwest}},
+booktitle = {Network Analysis in Archaeology: New Approaches to Regional Interaction},
+year = {2013},
+editor = {Knappett, Carl},
+publisher = {Oxford University Press},
+month = may
 }
